--- a/src/locales/messages.en-US.xlf
+++ b/src/locales/messages.en-US.xlf
@@ -2,6 +2,22 @@
 <xliff version="1.2" xmlns="urn:oasis:names:tc:xliff:document:1.2">
   <file source-language="en-US" datatype="plaintext" original="ng2.template">
     <body>
+      <trans-unit id="3675082934098694037" datatype="html">
+        <source>Some company or business name</source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/api/local-memory/mock/mock-company-details.examples.ts</context>
+          <context context-type="linenumber">11</context>
+        </context-group>
+        <note priority="1" from="description">Example of a company or business name</note>
+      </trans-unit>
+      <trans-unit id="6193889690878281109" datatype="html">
+        <source>This paragraph should describe your business profile, motivation, goals, success stories, whatever helps build an image.</source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/api/local-memory/mock/mock-company-details.examples.ts</context>
+          <context context-type="linenumber">12</context>
+        </context-group>
+        <note priority="1" from="description">Example of a paragraph used to describe the business this application is meant for</note>
+      </trans-unit>
       <trans-unit id="5378516332819650849" datatype="html">
         <source>Create</source>
         <context-group purpose="location">
