--- a/src/locales/messages.es-CL.xlf
+++ b/src/locales/messages.es-CL.xlf
@@ -1191,7 +1191,7 @@
         <note priority="1" from="description">Name of field for filtering products by selected category</note>
       </trans-unit>
       <trans-unit id="8605572686681043825" datatype="html">
-        <source>Limpiar</source>
+        <source>Por Nombre</source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/shared/components/product-filters-panel/product-filters-panel.component.html</context>
           <context context-type="linenumber">23</context>
