--- a/src/locales/messages.es.xlf
+++ b/src/locales/messages.es.xlf
@@ -2114,7 +2114,7 @@
         <note priority="1" from="description">Label with total price of taxes being {{ receipt.taxValue }}</note>
       </trans-unit>
       <trans-unit id="3489593325740504759" datatype="html">
-        <source>Total pagado: <x id="INTERPOLATION" equiv-text="{{ receipt.totalValue | currency }}"/></source>
+        <source>Valor total: <x id="INTERPOLATION" equiv-text="{{ receipt.totalValue | currency }}"/></source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/store/routes/receipt/receipt-card/store-receipt-card.component.html</context>
           <context context-type="linenumber">17</context>
@@ -2122,7 +2122,7 @@
         <note priority="1" from="description">Label with total price of transaction being {{ receipt.totalValue}}</note>
       </trans-unit>
       <trans-unit id="5028777105388019087" datatype="html">
-        <source>Detalles de la transacción</source>
+        <source>Detalles</source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/store/routes/receipt/receipt-card/store-receipt-card.component.html</context>
           <context context-type="linenumber">18</context>
